[gd_scene load_steps=34 format=3 uid="uid://dayu6wxnccwhm"]

[ext_resource type="PackedScene" uid="uid://wwe1ojobhi71" path="res://environment/environment.tscn" id="1_vykj5"]
[ext_resource type="Script" path="res://game/game.gd" id="1_y27ob"]
[ext_resource type="Shader" path="res://post-processing/post-processing.gdshader" id="2_3sohm"]
[ext_resource type="PackedScene" uid="uid://cwbdfcdw51eus" path="res://game/level.tscn" id="2_hvccx"]
[ext_resource type="Theme" uid="uid://b0ci0o4ry5ldo" path="res://gui/debug_theme.tres" id="4_1vvct"]
[ext_resource type="PackedScene" uid="uid://colf3fgh55ffe" path="res://gui/health_bar/health_bar.tscn" id="5_0c5jd"]
[ext_resource type="PackedScene" uid="uid://bpi3hyw3wfasa" path="res://game/harbinger.tscn" id="5_vkoai"]
[ext_resource type="AudioStream" uid="uid://o4m1rueexvjv" path="res://game/main_theme.ogg" id="8_epd81"]
[ext_resource type="AudioStream" uid="uid://dbtmc16rwu01l" path="res://game/bone_rattle.ogg" id="9_0r2lr"]
[ext_resource type="AudioStream" uid="uid://ex6tdseyyhud" path="res://gui/main_menu_theme.ogg" id="9_rs726"]
[ext_resource type="AudioStream" uid="uid://dp143f5im5tqh" path="res://game/wizard_audio/wizard-01.ogg" id="11_s4pn5"]
[ext_resource type="AudioStream" uid="uid://dofi6fj6foemm" path="res://game/wizard_audio/wizard-02.ogg" id="12_k4m2a"]
[ext_resource type="AudioStream" uid="uid://bdo4llh8i24c6" path="res://game/wizard_audio/wizard-11.ogg" id="13_j0u0d"]
[ext_resource type="AudioStream" uid="uid://d35dxg86y1ink" path="res://game/wizard_audio/wizard-12.ogg" id="14_a0q5p"]
[ext_resource type="AudioStream" uid="uid://cr515yqw5kjts" path="res://game/wizard_audio/wizard-13.ogg" id="15_pd8cf"]
[ext_resource type="AudioStream" uid="uid://cfwoxhbs86gbr" path="res://game/wizard_audio/wizard-03.ogg" id="16_06fkb"]
[ext_resource type="AudioStream" uid="uid://cw4na1h2ad735" path="res://game/wizard_audio/wizard-04.ogg" id="17_65m5k"]
[ext_resource type="AudioStream" uid="uid://wjv134f434xg" path="res://game/wizard_audio/wizard-05.ogg" id="18_4p8x0"]
[ext_resource type="AudioStream" uid="uid://dy5c8j6ajp640" path="res://game/wizard_audio/wizard-06.ogg" id="19_bn32j"]
[ext_resource type="AudioStream" uid="uid://cvhkuy0h5dko7" path="res://game/wizard_audio/wizard-07.ogg" id="20_b01kx"]
[ext_resource type="AudioStream" uid="uid://dmr4v6fwrhrac" path="res://game/wizard_audio/wizard-08.ogg" id="21_qgcwr"]
[ext_resource type="AudioStream" uid="uid://qgjuni3ls25a" path="res://game/wizard_audio/wizard-09.ogg" id="22_b7ivn"]
[ext_resource type="AudioStream" uid="uid://caqessixu0ian" path="res://game/wizard_audio/wizard-10.ogg" id="23_4libb"]
[ext_resource type="AudioStream" uid="uid://djo56fn5qj642" path="res://game/laser_audio/contLaser/contLaser-01.ogg" id="24_r42gq"]
[ext_resource type="AudioStream" uid="uid://dkbj3kjto08w0" path="res://game/laser_audio/laserImpact.ogg" id="24_vl2rk"]
[ext_resource type="AudioStream" uid="uid://bcbjof1xb6grh" path="res://game/laser_audio/contLaser/contLaser-02.ogg" id="25_vbhn7"]
[ext_resource type="AudioStream" uid="uid://bqlkb6efcfuuf" path="res://game/laser_audio/contLaser/contLaser-03.ogg" id="26_3qpha"]

[sub_resource type="ViewportTexture" id="ViewportTexture_tjoow"]
viewport_path = NodePath("EnvironmentTexture/EnvironmentViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_f6hiq"]
viewport_path = NodePath("LevelTexture/LevelViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3obrf"]
shader = ExtResource("2_3sohm")
shader_parameter/u_invert = 0.0
shader_parameter/u_vignette = 0.5
shader_parameter/u_filmgrain = 1.0
shader_parameter/u_abbrLevel = 0.5
shader_parameter/u_abbrEnv = 1.5
shader_parameter/u_shakeX = null
shader_parameter/u_shakeY = null

[sub_resource type="Theme" id="Theme_o4fla"]
Label/colors/font_color = Color(0.635294, 0.243137, 0.54902, 1)
Label/colors/font_outline_color = Color(0.145098, 0.337255, 0.180392, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 41
Label/fonts/font = null

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fi7l6"]
streams_count = 13
stream_0/stream = ExtResource("11_s4pn5")
stream_0/weight = 1.0
stream_1/stream = ExtResource("12_k4m2a")
stream_1/weight = 1.0
stream_2/stream = ExtResource("16_06fkb")
stream_2/weight = 1.0
stream_3/stream = ExtResource("17_65m5k")
stream_3/weight = 1.0
stream_4/stream = ExtResource("18_4p8x0")
stream_4/weight = 1.0
stream_5/stream = ExtResource("19_bn32j")
stream_5/weight = 1.0
stream_6/stream = ExtResource("20_b01kx")
stream_6/weight = 1.0
stream_7/stream = ExtResource("21_qgcwr")
stream_7/weight = 1.0
stream_8/stream = ExtResource("22_b7ivn")
stream_8/weight = 1.0
stream_9/stream = ExtResource("23_4libb")
stream_9/weight = 1.0
stream_10/stream = ExtResource("13_j0u0d")
stream_10/weight = 1.0
stream_11/stream = ExtResource("14_a0q5p")
stream_11/weight = 1.0
stream_12/stream = ExtResource("15_pd8cf")
stream_12/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rug6o"]
streams_count = 3
stream_0/stream = ExtResource("24_r42gq")
stream_0/weight = 1.0
stream_1/stream = ExtResource("25_vbhn7")
stream_1/weight = 1.0
stream_2/stream = ExtResource("26_3qpha")
stream_2/weight = 1.0

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_y27ob")

[node name="EnvironmentTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = SubResource("ViewportTexture_tjoow")

[node name="EnvironmentViewport" type="SubViewport" parent="EnvironmentTexture"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(427, 240)
render_target_update_mode = 4

[node name="Environment" parent="EnvironmentTexture/EnvironmentViewport" instance=ExtResource("1_vykj5")]

[node name="LevelTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_f6hiq")

[node name="LevelViewport" type="SubViewport" parent="LevelTexture"]
unique_name_in_owner = true
transparent_bg = true
snap_2d_transforms_to_pixel = true
size = Vector2i(640, 360)

[node name="Level" parent="LevelTexture/LevelViewport" instance=ExtResource("2_hvccx")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_3obrf")
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_1vvct")

[node name="TotalLevelWidthLabel" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CameraPosLabel" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "WOAH"

[node name="CalculatedCameraLabel" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="DebugContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LevelViewLabel" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "YAY"

[node name="CalculatedLevelViewLabel" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="UIOverlay" type="CanvasLayer" parent="."]

[node name="Harbinger" parent="UIOverlay" instance=ExtResource("5_vkoai")]
unique_name_in_owner = true

[node name="Grid" type="GridContainer" parent="UIOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -36.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
metadata/_edit_use_anchors_ = true

[node name="Player1" type="Control" parent="UIOverlay/Grid"]
layout_mode = 2

[node name="HealthBar" parent="UIOverlay/Grid/Player1" instance=ExtResource("5_0c5jd")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
scale = Vector2(4, 4)
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Player2" type="Control" parent="UIOverlay/Grid"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HealthBar" parent="UIOverlay/Grid/Player2" instance=ExtResource("5_0c5jd")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 960.0
offset_right = 1201.0
offset_bottom = 0.0
scale = Vector2(-4, 4)
size_flags_horizontal = 10
size_flags_vertical = 2

[node name="TimeMarginContainer" type="MarginContainer" parent="UIOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o4fla")
theme_override_constants/margin_top = 50

[node name="TimerCenterContainer" type="CenterContainer" parent="UIOverlay/TimeMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TimerLabel" type="Label" parent="UIOverlay/TimeMarginContainer/TimerCenterContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainThemeSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_epd81")
autoplay = true
bus = &"Music"

[node name="ThreatensToLoseSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_rs726")
bus = &"Music"

[node name="BoneRattleSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_0r2lr")
bus = &"SFX"

[node name="WizardSounds" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_fi7l6")
bus = &"SFX"

[node name="LaserContSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_rug6o")

[node name="LaserImpactSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("24_vl2rk")

[connection signal="gui_input" from="LevelTexture" to="." method="_on_level_texture_gui_input"]
